--- a/1/EomTool/EomToolWeb/Templates/Campaigns/_Brief.tmpl.htm
+++ b/1/EomTool/EomToolWeb/Templates/Campaigns/_Brief.tmpl.htm
@@ -25,7 +25,7 @@
             </tr>
             <tr>
                 <td class="fieldName">Payout:</td>
-                <td>${CostCurrency}${Cost}</td>
+                <td># if(Cost > 0){ if(DefaultPriceFormat=="RevShare") { #${Cost}%# } else { #${CostCurrency}${Cost}# } } #</td>
             </tr>
             <tr>
                 <td class="fieldName">Restrictions:</td>
@@ -41,7 +41,7 @@
             </tr>
             <tr>
                 <td class="fieldName">Payout to DA:</td>
-                <td>${RevenueCurrency}${Revenue}</td>
+                <td># if(RevenueIsPercentage){ #${Revenue}%# }else{ #${RevenueCurrency}${Revenue}# } #</td>
             </tr>
             <tr>
                 <td class="fieldName">Passed Information:</td>
@@ -62,6 +62,10 @@
             <tr>
                 <td class="fieldName">Countries:</td>
                 <td>${CountryCodes}</td>
+            </tr>
+            <tr>
+                <td class="fieldName">Default Price Format:</td>
+                <td>${DefaultPriceFormat}</td>
             </tr>
         </table>
     </div>
@@ -94,7 +98,7 @@
             </tr>
             <tr>
                 <td class="fieldName">Payout:</td>
-                <td>${CostCurrency}${Cost}</td>
+                <td># if(Cost > 0){ if(DefaultPriceFormat=="RevShare") { #${Cost}%# } else { #${CostCurrency}${Cost}# } } #</td>
             </tr>
             <tr>
                 <td class="fieldName">Restrictions:</td>
@@ -110,7 +114,7 @@
             </tr>
             <tr>
                 <td class="fieldName">Payout to DA:</td>
-                <td>${RevenueCurrency}${Revenue}</td>
+                <td># if(RevenueIsPercentage){ #${Revenue}%# }else{ #${RevenueCurrency}${Revenue}# } #</td>
             </tr>
             <tr>
                 <td class="fieldName">Passed Information:</td>
