Wiki-ByCountry: only show countries that have campaigns

--- a/1/EomTool/EomToolWeb/Templates/Campaigns/_Brief.tmpl.htm
+++ b/1/EomTool/EomToolWeb/Templates/Campaigns/_Brief.tmpl.htm
@@ -136,6 +136,10 @@
                 <td class="fieldName">Countries:</td>
                 <td>${CountryCodes}</td>
             </tr>
+            <tr>
+                <td class="fieldName">Default Price Format:</td>
+                <td>${DefaultPriceFormat}</td>
+            </tr>
         </table>
     </div>
 </script>
