--- a/1/EomTool/EomToolWeb/Views/Campaigns/ListByCountry.cshtml
+++ b/1/EomTool/EomToolWeb/Views/Campaigns/ListByCountry.cshtml
@@ -5,22 +5,17 @@
     ViewBag.MenuItem = "ByCountry";
     ViewBag.NoSearch = true;
     Layout = "~/Views/Shared/_LayoutCampaignWiki.cshtml";
+    var countryCodes = Model.OrderBy(country => country.CountryCode).Select(country => country.CountryCode);
 }
 
 <div style="margin-left: 30px">
 
     <h2>Campaigns By Country</h2>
-
+    <br />
     @{
-        List<string> countryCodes = ViewBag.CountryCodes;
-        string lastCountry = countryCodes.FirstOrDefault();
-        foreach (var country in countryCodes)
+        foreach (var country in Model.OrderBy(c => c.CountryCode))
         {
-            if (country.Substring(0, 1) != lastCountry.Substring(0, 1)) {
-                <br />
-            }
-            <a href="#@country">@country</a>            
-            lastCountry = country;
+            <a href="#@country.CountryCode"><b>@country.CountryCode</b>&nbsp;(@country.ActiveCampaigns.Count())</a>
         }
     }
 
@@ -28,14 +23,13 @@
     {
         <span id="@country.CountryCode"></span>
         <hr />
-        <br />        
+        <br />
         <h3>@Html.ActionLink(country.CountryCode, "List2", new { country = country.CountryCode }):</h3>
         <ol>
-        @foreach (var campaign in country.Campaigns.Where(c => c.StatusId != Status.Inactive).OrderBy(c => c.Countries.Count() > 1).ThenBy(c => c.Name))
+        @foreach (var campaign in country.ActiveCampaigns.OrderBy(c => c.Countries.Count() > 1).ThenBy(c => c.Name))
         {
             <li>@Html.ActionLink(campaign.Name, "List2", new { pid = campaign.Pid })</li>
         }
         </ol>
     }
 </div>
-Z
