Wiki: repo.CampaignsExcluding(); rm exclude v0 stuff

--- a/1/EomTool/EomToolWeb/Views/Shared/_LayoutCampaignWiki.cshtml
+++ b/1/EomTool/EomToolWeb/Views/Shared/_LayoutCampaignWiki.cshtml
@@ -78,8 +78,8 @@
         function SaveWikiSettings() {
             var url = '@Url.Action("Settings", "Wiki")';
             $.post(url, $('#frmWikiSettings').serialize(), function (data) {
-                //TODO: Reload Campaigns
                 $('#divWikiSettings').dialog("close");
+                document.location.reload();
             });
         }
 
