Wiki: ExcludeHidden, ExcludeInactive

--- a/1/EomTool/EomToolWeb/Templates/Campaigns/_Brief.tmpl.htm
+++ b/1/EomTool/EomToolWeb/Templates/Campaigns/_Brief.tmpl.htm
@@ -67,6 +67,14 @@
                 <td class="fieldName">Default Price Format:</td>
                 <td>${DefaultPriceFormat}</td>
             </tr>
+            <tr>
+                <td class="fieldName">Status:</td>
+                <td>${Status}</td>
+            </tr>
+            <tr>
+                <td class="fieldName">Hidden:</td>
+                <td>${Hidden}</td>
+            </tr>
         </table>
     </div>
 </script>
@@ -139,6 +147,14 @@
             <tr>
                 <td class="fieldName">Default Price Format:</td>
                 <td>${DefaultPriceFormat}</td>
+            </tr>
+            <tr>
+                <td class="fieldName">Status:</td>
+                <td>${Status}</td>
+            </tr>
+            <tr>
+                <td class="fieldName">Hidden:</td>
+                <td>${Hidden}</td>
             </tr>
         </table>
     </div>
